--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-native-web": "~0.19.13",
     "react-native-svg": "15.8.0",
     "react-native-reanimated": "~3.16.1",
-    "react-native-gesture-handler": "~2.20.2"
+    "react-native-gesture-handler": "~2.20.2",
+    "@shopify/react-native-skia": "1.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
